# StateManager

./: .gitignore  Compare.py  GenerateSyncData.py  README.md  Tools.py  TrainDecisionTree.py  decision_tree.cpp  decision_tree_model.pkl  train_decision_tree.py
Data/Car/2025_12_25_21_50_39_720/: beacon.txt  gnss_nmea.txt  own_sync_time.txt  wifi.txt
Data/Car/2025_12_25_21_55_40_821/: beacon.txt  ntp_time.txt  wifi.txt
Data/Pedestrian/2025_12_25_22_02_06_917/: beacon.txt  gnss_nmea.txt  gnss_raw.txt  header.txt  wifi.txt
Data/Pedestrian/2025_12_25_22_04_33_107/: beacon.txt  gnss_blh.txt  gnss_nmea.txt  gnss_raw.txt  sensors.txt  wifi.txt
Data/Pedestrian/2025_12_25_22_06_42_625/: beacon.txt  gnss_blh.txt  gnss_nmea.txt  gnss_raw.txt  sensors.txt  wifi.txt
Data/TestData/2025_12_25_22_10_26_196/: beacon.txt  gnss_blh.txt  gnss_nmea.txt  gnss_raw.txt  time_marker.txt
TestInCppProject/: CMakeLists.txt  README.md  status_log.txt  status_log_raw.txt
TestInCppProject/include/: StateManager.h
TestInCppProject/src/: StateManager.cpp  main.cpp
